--- a/src/app/tab-panel/components/content-panel/content-panel.component.html
+++ b/src/app/tab-panel/components/content-panel/content-panel.component.html
@@ -1,1 +1,1 @@
-<section [id]="panelId" role="tabpanel"><ng-content></ng-content></section>
+<section [id]="id" role="tabpanel"><ng-content></ng-content></section>
