add keyboard accessibility

--- a/src/app/tab-panel/components/tab-panel/tab-panel.component.html
+++ b/src/app/tab-panel/components/tab-panel/tab-panel.component.html
@@ -1,4 +1,4 @@
-<app-tab-list>
+<app-tab-list (keyup)="onKeys($event)">
   <app-tab-button
     [panelId]="0"
     [isSelected]="currentPanelId === 0"
