add the button1 and the button3

--- a/src/app/tab-panel/components/tab-button/tab-button.component.html
+++ b/src/app/tab-panel/components/tab-button/tab-button.component.html
@@ -2,6 +2,7 @@
   role="tab"
   [attr.aria-controls]="'panel-' + panelId"
   [attr.aria-selected]="isSelected"
+  [attr.tabindex]="isSelected ? null : -1"
 >
   <ng-content></ng-content>
 </button>
