--- a/src/app/tab-panel/components/tab-panel/tab-panel.component.html
+++ b/src/app/tab-panel/components/tab-panel/tab-panel.component.html
@@ -1,4 +1,5 @@
-<app-tab-list (keyup)="onKeys($event)">
+<!-- When a key is pressed -->
+<app-tab-list (keydown)="onKeys($event)">
   <app-tab-button
     [panelId]="0"
     [isSelected]="currentPanelId === 0"
