change panelId to string

--- a/src/app/tab-panel/components/content-panel/content-panel.component.html
+++ b/src/app/tab-panel/components/content-panel/content-panel.component.html
@@ -1,1 +1,3 @@
-<section [id]="id" role="tabpanel"><ng-content></ng-content></section>
+<section [id]="id" role="tabpanel">
+  <ng-content></ng-content>
+</section>
