--- a/src/app/tab-panel/components/tab-button/tab-button.component.html
+++ b/src/app/tab-panel/components/tab-button/tab-button.component.html
@@ -1,6 +1,6 @@
 <button
   role="tab"
-  [attr.aria-controls]="'panel-' + panelId"
+  [attr.aria-controls]="panelId"
   [attr.aria-selected]="isSelected"
   [attr.tabindex]="isSelected ? null : -1"
 >
