--- a/src/app/tab-panel/components/tab-panel/tab-panel.component.html
+++ b/src/app/tab-panel/components/tab-panel/tab-panel.component.html
@@ -1,39 +1,39 @@
 <!-- When a key is pressed -->
 <app-tab-list (keydown)="onKeys($event)">
   <app-tab-button
-    [panelId]="0"
-    [isSelected]="currentPanelId === 0"
+    [panelId]="'panel0'"
+    [isSelected]="currentPanelId === 'panel0'"
     (click)="activatePanel(0)"
     >Tab 1</app-tab-button
   >
   <app-tab-button
-    [panelId]="1"
-    [isSelected]="currentPanelId === 1"
+    [panelId]="'panel1'"
+    [isSelected]="currentPanelId === 'panel1'"
     (click)="activatePanel(1)"
     >Tab 2</app-tab-button
   >
   <app-tab-button
-    [panelId]="2"
-    [isSelected]="currentPanelId === 2"
+    [panelId]="'panel2'"
+    [isSelected]="currentPanelId === 'panel2'"
     (click)="activatePanel(2)"
     >Tab 3</app-tab-button
   >
   <app-tab-button
-    [panelId]="3"
-    [isSelected]="currentPanelId === 3"
+    [panelId]="'panel3'"
+    [isSelected]="currentPanelId === 'panel3'"
     (click)="activatePanel(3)"
     >Tab 4</app-tab-button
   >
 </app-tab-list>
-<app-content-panel *ngIf="currentPanelId === 0" [id]="0"
+<app-content-panel *ngIf="currentPanelId === 'panel0'" [id]="'panel0'"
   >Content Tab 1</app-content-panel
 >
-<app-content-panel *ngIf="currentPanelId === 1" [id]="1"
+<app-content-panel *ngIf="currentPanelId === 'panel1'" [id]="'panel1'"
   >Content Tab 2</app-content-panel
 >
-<app-content-panel *ngIf="currentPanelId === 2" [id]="2"
+<app-content-panel *ngIf="currentPanelId === 'panel2'" [id]="'panel2'"
   >Content Tab 3</app-content-panel
 >
-<app-content-panel *ngIf="currentPanelId === 3" [id]="3"
+<app-content-panel *ngIf="currentPanelId === 'panel3'" [id]="'panel3'"
   >Content Tab 4</app-content-panel
 >
