--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<button>Button 1</button>
-<app-tab-panel></app-tab-panel>
-<button>Button 3</button>
+<main fxLayout="row" fxLayoutAlign="center center">
+  <section>
+    <button>Button 1</button>
+    <app-tab-panel></app-tab-panel>
+    <button>Button 3</button>
+  </section>
+</main>
