--- a/src/app/tab-panel/components/tab-panel/tab-panel.component.scss
+++ b/src/app/tab-panel/components/tab-panel/tab-panel.component.scss
@@ -1,6 +1,6 @@
 .tab-panel {
-  background: whitesmoke;
   max-width: 800px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 15px;
   margin: 1rem 0;
 }
