--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<main fxLayout="row" fxLayoutAlign="center center">
+<main fxLayout="column" fxLayoutAlign="center center">
+  <h1>Angular Tab Panel</h1>
   <section>
     <button>Button 1</button>
     <app-tab-panel></app-tab-panel>
